lab3/service_manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service-lab3
spec:
  type: ClusterIP
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000
