lab3/ingress_manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: react-test.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service-lab3
                port:
                  number: 443
